--- a/part-3.html
+++ b/part-3.html
@@ -599,36 +599,79 @@
             <h2 class="bg-buas rounded-pill display-6 fw-bold py-1 px-2 d-inline-block">3.4</h2>
           </div>
           <div class="col-10 col-md-5">
-            <h2 class="display-3 fw-bolder lh-1 mb-4">What is Bootstrap?</h2>
+            <h2 class="display-3 fw-bolder lh-1 mb-4">Bootstrap Basics</h2>
           </div>
           <div class="col-md-6">
-            <h5>
-              <img class="me-1" src="images/common/film.svg" width="16" alt="film icon">
-              <a class="link-light" href="https://web.microsoftstream.com/" target="_blank">Watch on Microsoft Stream</a>
-            </h5>
+            <h5>Summary</h5>
             <ul>
-              <li>XXXXX.</li>
-              <li>XXXXX.</li>
-              <li>XXXXX.</li>
+              <li>Bootstrap is a library of CSS classes.</li>
+              <li>Rather than coming up with your own CSS code, rest on the &ldquo;shoulders of giants&rdquo;</li>
+              <li>You can combine both approaches!</li>
+              <li>Check part 4 for advanced uses of bootstrap</li>
             </ul>
           </div>
         </header>
         <article class="row justify-content-center">
-		  <!--- left column starts --->
           <div class="col-md-6 col-xxl-5 py-3">
-            <h3 class="color-buas text-center">Left Heading</h3>
-            <p>xxxxx.</p>
+            <h3 class="color-blue text-center">What&rsquo;s a library?</h3>
+            <p><strong>Bootstrap</strong> is an open-source software (OSS) library, originally developed by Twitter, and now maintained by an international team.</p>
+            <p>Bootstrap is currently used on thousands of websites across the world, as it makes the styling of web pages quick and convenient.</p>
+            <p>Using third-party libraries is an extremely common pattern in the software world, because developing software is so complex and expensive that even big companies prefer joining forces and develop open source software together.</p>
+            <p>You use Open Source Software everyday without even noticing. For example:</p>
+            <ul>
+              <li>The Android operating system is based on the open-source kernel &lsquo;Linux&rdquo;</li>
+              <li>The Chrome</li>
+              <li>The most common database library, SQLite, is used in thousand of everyday applications, from Adobe software to car satellite navigation systems</li>
+            </ul>
           </div>
-		  <!--- left column ends --->
-		  <!--- right column starts --->
+          <div class="col-md-6 col-xxl-5 py-3 bg-lightorange">
+            <h3>What does Bootstrap do?</h3>
+            <p>Boostrap provides three things that are incredibly useful for web developers:</p>
+            <ol>
+              <li>It offers <strong>standard styles</strong> for common HTML elements (&lt;p&gt;, &lt;h1&gt;, etc.) that look nicer than default browser styles.</li>
+              <li>You can choose from <strong>hundreds of css classes</strong> to add colours, font sizes, alignments, margins</li>
+              <li>It provides <strong>complex components</strong> &mdash; this is discussed in detail in part 4 of this guide.</li>
+            </ol>
+            <p>To learn about Bootstrap&rsquo;s capacities and find examples you can copy, <a href="https://getbootstrap.com/docs/" target="_blank">check the official Bootstrap documentation</a>.</p>
+          </div>
+          <div class="col-md-6 col-xxl-5 py-3">
+            <h3 class="color-buas text-center">Adding Bootstrap to a project</h3>
+            <p>To use Bootstrap&rsquo;s styles, you must link the Bootstrap CSS file in your HTML file. This can be done in two ways:</p>
+            <ul>
+              <li>You download <strong>bootstrap.css</strong> from the Bootstrap website and put it in your CSS folder. You then make a link to that file based on your folder structure.
+                <p class="mb-1 p-1 border border-secondary rounded font-monospace text-primary">
+                  &lt;link <span class="text-success">rel=<wbr>"<span class="text-danger">stylesheet</span>" href=<wbr>"<span class="text-danger">css/<wbr>bootstrap<wbr>.css</span><wbr>"</span>&gt;
+                </p>
+                This is called a &ldquo;local installation&rdquo;
+              </li>
+              <li>You link towards a copy of that file that is hosted on a <strong>Content Distribution Network</strong> (CDN).
+                <p class="mb-1 p-1 border border-secondary rounded font-monospace text-primary">
+                  &lt;link <span class="text-success">rel=<wbr>"<span class="text-danger">stylesheet</span>" href=<wbr>"<span class="text-danger">https://<wbr>cdn.<wbr>jsdelivr.<wbr>net/<wbr>npm/<wbr>bootstrap<wbr>@5.1.1/<wbr>dist/<wbr>css/<wbr>bootstrap.<wbr>min.<wbr>css</span><wbr>"</span>&gt;
+                </p>
+              </li>
+            </ul>
+            <p>In addition to the link to the CSS file, you need a link to a <strong>JavaScript</strong> file which provides support for dynamic interactive behaviour, such as collapsible menus (e.g. see what happens here when using the search function).</p>
+            <p>You won&rsquo;t need to worry about this, Bootstrap is pre-installed (using the CDN method) in your CV template.</p>
+          </div>
           <div class="col-md-6 col-xxl-5 py-3 bg-lightblue">
-            <h3 class="text-center">Right Heading</h3>
-            <p>xxxx.</p>
+            <h3 class="text-center">Bootstrap&rsquo;s default styles</h3>
+            <p>See below how simple elements look like with built-in browser styles and with Bootstrap styles.</p>
+            <div class="row">
+              <figure class="col-6">
+                <img class="img-fluid d-block mx-auto" src="images/part-3/default-browser-styles.png">
+                <figcaption>Default Browser styles on Chrome</figcaption>
+              </figure>
+              <figure class="col-6">
+                <img class="img-fluid d-block mx-auto" src="images/part-3/default-bootstrap-styles.png">
+                <figcaption>Default Bootstrap styles</figcaption>
+              </figure>
+            </div>
+            <p>The main differences are that Bootstrap uses a <strong>sans-serif</strong> font, and that it removes some of the spacing between the elements on the page and the frame of the browser.</p>
           </div>
 		  <!--- right column ends --->	
 		  <!--- left column starts --->
           <div class="col-md-6 col-xxl-5 py-3">
-            <h3 class="color-blue text-center">Left Heading</h3>
+            <h3 class="color-blue text-center">Colors and typography</h3>
             <p>xxxxx.</p>
           </div>
 		  <!--- left column ends --->
@@ -638,8 +681,8 @@
             <p>xxxx.</p>
           </div>
 		  <!--- right column ends --->		
-          <div class="col-xxl-10 py-3">
-            <h3 class="color-blue text-center">Center Heading&hellip;</h3>
+          <div class="col-md-6 col-xxl-5 py-3">
+            <h3 class="color-buas text-center">Box model classes</h3>
           </div>
         </article>
         <footer class="row bg-gray">
