--- a/part-2.html
+++ b/part-2.html
@@ -332,7 +332,7 @@
             <p>All these tags, as well as <strong>&lt;p&gt;</strong> and <strong>&lt;br&gt;</strong>, have in common that opening them creates a new &ldquo;block&rdquo;. This means that you break the flow of the text and move to a new line. This behaviour will become clearer when you compare these with inline tags.</p>
           </div>
           <div class="col-lg-6 col-xxl-5 py-3 bg-lightorange row">
-            <div class="col-sm-7 col-md-12 col-lg-7">
+            <div class="col-sm-7">
               <h5 class="text-success mt-2 mb-0">Code:</h5>
               <div class="p-2 border border-dark bg-white font-monospace text-primary">
                 &lt;h3&gt;<span class="text-dark">Heading 3</span>&lt;/h3&gt;
@@ -362,7 +362,7 @@
                 &lt;/ol&gt;
               </div>
             </div>
-            <div class="col-sm-5 col-md-12 col-lg-5">
+            <div class="col-sm-5">
               <h5 class="text-danger mt-2 mb-0">Result:</h5>
               <div class="p-2 border bg-light">
                 <h3>Heading 3</h3>
@@ -395,7 +395,7 @@
             <p>The biggest difference with the first list of tags is that inline ones do not interrupt the flow of text but rather make it continue on the same line.</p>
           </div>
           <div class="col-lg-6 col-xxl-5 py-3 bg-lightblue row">
-            <div class="col-sm-7 col-md-12 col-lg-7">
+            <div class="col-sm-7">
               <h5 class="text-success mt-2 mb-0">Code:</h5>
               <div class="p-2 border border-dark bg-white font-monospace">
                 <span class="text-primary">&lt;p&gt;</span>
@@ -425,7 +425,7 @@
                 <span class="text-primary">&lt;/p&gt;</span>
               </div>
             </div>
-            <div class="col-sm-5 col-md-12 col-lg-5">
+            <div class="col-sm-5">
               <h5 class="text-danger mt-2 mb-0">Result:</h5>
               <div class="p-2 border bg-light">
                 <p>This paragraph contains <strong>words in bold type</strong>, <em>words in italics</em> and <u>also underlined ones</u>.</p>
@@ -452,7 +452,7 @@
           </div>
           <div class="col-lg-6 col-xxl-5 p-3 px-md-5 px-lg-3 px-xxl-4 bg-lightorange row align-content-start">
             <h3 class="col-12 text-center">Example semantic elements</h3>
-            <div class="col-sm-7 col-md-12 col-lg-7">
+            <div class="col-sm-7">
               <p>The meaning of semantic tags is defined in the HTML standard:</p>
               <ul>
                 <li><strong>&lt;header&gt;</strong> is used for the introduction to a piece of content.</li>
@@ -463,7 +463,7 @@
                 <li><strong>&lt;aside&gt;</strong> to introduce indirectly related content.</li>
               </ul>
             </div>
-            <div class="col-sm-5 col-md-12 col-lg-5">
+            <div class="col-sm-5">
               <p>The structure of your page could for example look like this:</p>
               <table class="table table-primary table-striped table-bordered text-center">
                 <tbody>
@@ -506,7 +506,7 @@
               <form class="needs-validation" method="post" action="mailto:buas@buas.nl?subject=HTML%20Test" enctype="text/plain">
                 <h6 class="mt-4 mb-1">Use this form to send an email</h6>
                 <div class="row">
-                  <div class="col-sm-6 col-md-12 col-lg-6">
+                  <div class="col-sm-6">
                     <div class="form-floating mb-3">
                       <input type="email" class="form-control" id="emailfield" name="sender-email" placeholder="email@buas.nl" required>
                       <label for="emailfield" class="form-label">Your email</label>
@@ -528,7 +528,7 @@
                       </label>
                     </div>
                   </div>
-                  <div class="col-sm-6 col-md-12 col-lg-6">
+                  <div class="col-sm-6">
                     <div class="form-floating mb-3">
                       <textarea class="form-control" id="messagefield" name="message-contents" style="height: 10em;" placeholder="Your message" required></textarea>
                       <label for="messagefield" class="form-label">Your message</label>
