Updated all menus

--- a/checklist-group.html
+++ b/checklist-group.html
@@ -97,8 +97,29 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="#">Add style to your page</a>
+              <a class="dropdown-item" href="part-3.html">Add style to your page</a>
             </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-3.html#overview_goals"><span class="badge rounded-pill bg-buas">3.1</span> Overview & goals</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-3.html#what_is_css"><span class="badge rounded-pill bg-buas">3.2</span> CSS Basics</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-3.html#practice_editing_styles"><span class="badge rounded-pill bg-buas">3.3</span> Practice: Edit styles.css</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-3.html#what_is_bootstrap"><span class="badge rounded-pill bg-buas">3.4</span> Bootstrap Basics</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-3.html#combine_bootstrap_css"><span class="badge rounded-pill bg-buas">3.5</span> Combine Bootstrap and your own CSS</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-3.html#using_fonts"><span class="badge rounded-pill bg-buas">3.6</span> Use Web Fonts</a>
+            </li> 
           </ul>
         </li>
         <li class="nav-item">
@@ -199,7 +220,7 @@
           <ul>
             <li>Deliver the actual website by using GitHub pages (see details in Part 1 of the guide).</li>
             <li>The URL of the website should be on the first page of the justification document.</li>
-            <li>The justifications should be provided in the common justification document on Teams.</li>
+            <li>The justifications should be provided in the common justification document on CumLaude.</li>
           </ul>
         </div>
         <div class="col-sm-6 col-xxl-5 py-3">
