--- a/part-3.html
+++ b/part-3.html
@@ -27,12 +27,13 @@
           </a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
-            Part 1
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-lg-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            <span class="d-none d-sm-inline">Part&nbsp;</span>
+            1
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="part-1.html">Publish your first page</a>
+              <a class="dropdown-item" href="part-1.html#part_1">Publish your first page</a>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -54,18 +55,19 @@
             </li>
             <li>
               <a class="dropdown-item" href="part-1.html#editing_publishing"><span class="badge rounded-pill bg-buas">1.6</span> Edit and publish</a>
-            </li>		  
+            </li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
-            Part 2
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-lg-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            <span class="d-none d-sm-inline">Part&nbsp;</span>
+            2
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="#">Edit the content of your page</a>
+              <a class="dropdown-item" href="part-2.html#part_2">Edit the content of your page</a>
             </li>
-			  <li>
+            <li>
               <hr class="dropdown-divider">
             </li>
             <li>
@@ -78,75 +80,104 @@
               <a class="dropdown-item" href="part-2.html#dev_tools"><span class="badge rounded-pill bg-buas">2.3</span> Use developer tools</a>
             </li>
             <li>
-              <a class="dropdown-item" href="part-2.html#avoid_errors"><span class="badge rounded-pill bg-buas">2.4</span> Avoid coding errors</a>
+              <a class="dropdown-item" href="part-2.html#avoid_errors"><span class="badge rounded-pill bg-buas">2.4</span> Avoid errors</a>
             </li>
             <li>
               <a class="dropdown-item" href="part-2.html#link"><span class="badge rounded-pill bg-buas">2.5</span> Link to images and pages</a>
             </li>
             <li>
-              <a class="dropdown-item" href="part-2.html#images"><span class="badge rounded-pill bg-buas">2.6</span> Manage images</a>
-            </li>		 
+              <a class="dropdown-item" href="part-2.html#manage_images"><span class="badge rounded-pill bg-buas">2.6</span> Manage images</a>
+            </li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3 active bg-gradient" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
-            Part 3
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-lg-3 active bg-gradient" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            <span class="d-none d-sm-inline">Part&nbsp;</span>
+            3
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="#">Add style to your page</a>
+              <a class="dropdown-item" href="part-3.html">Add style to your page</a>
             </li>
-			 <li>
+            <li>
               <hr class="dropdown-divider">
             </li>
             <li>
-              <a class="dropdown-item" href="#overview_goals"><span class="badge rounded-pill bg-buas">3.1</span> Overview & goals</a>
+              <a class="dropdown-item" href="part-3.html#overview_goals"><span class="badge rounded-pill bg-buas">3.1</span> Overview & goals</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#what_is_css"><span class="badge rounded-pill bg-buas">3.2</span> CSS Basics</a>
+              <a class="dropdown-item" href="part-3.html#what_is_css"><span class="badge rounded-pill bg-buas">3.2</span> CSS Basics</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#practice_editing_styles"><span class="badge rounded-pill bg-buas">3.3</span> Practice: Edit styles.css</a>
+              <a class="dropdown-item" href="part-3.html#practice_editing_styles"><span class="badge rounded-pill bg-buas">3.3</span> Practice: Edit styles.css</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#what_is_bootstrap"><span class="badge rounded-pill bg-buas">3.4</span> What is Bootstrap?</a>
+              <a class="dropdown-item" href="part-3.html#what_is_bootstrap"><span class="badge rounded-pill bg-buas">3.4</span> Bootstrap Basics</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#combine_bootstrap_css"><span class="badge rounded-pill bg-buas">3.5</span> Combine Bootstrap and your own CSS</a>
+              <a class="dropdown-item" href="part-3.html#combine_bootstrap_css"><span class="badge rounded-pill bg-buas">3.5</span> Combine Bootstrap and your own CSS</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#using_fonts"><span class="badge rounded-pill bg-buas">3.6</span> Using Fonts</a>
-            </li>  
+              <a class="dropdown-item" href="part-3.html#using_fonts"><span class="badge rounded-pill bg-buas">3.6</span> Use Web Fonts</a>
+            </li> 
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
-            Part 4
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-lg-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            <span class="d-none d-sm-inline">Part&nbsp;</span>
+            4
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="#">Towards your group website</a>
+              <a class="dropdown-item" href="part-4.html#part_4">Towards your group website</a>
+            </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-4.html#overview_goals"><span class="badge rounded-pill bg-buas">4.1</span> Overview & goals</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-4.html#web_design"><span class="badge rounded-pill bg-buas">4.2</span> Your design process</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-4.html#templates"><span class="badge rounded-pill bg-buas">4.3</span> A tour of our templates</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-4.html#ux_patterns"><span class="badge rounded-pill bg-buas">4.4</span> UX Patterns for the web</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-4.html#bootstrap_grid"><span class="badge rounded-pill bg-buas">4.5</span> The Bootstrap Grid</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-4.html#collaboration"><span class="badge rounded-pill bg-buas">4.6</span> Tips for collaboration</a>
             </li>
           </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
-            <img class="me-1" src="images/common/clipboard-check.svg" width="15" alt="Checklists">
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-lg-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            <img class="me-md-1" src="images/common/clipboard-check.svg" width="15" alt="Checklists">
             <span class="d-none d-md-inline">Checklists</span>
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="#">Individual Assignment</a>
+              <a class="dropdown-item" href="checklist-individual.html">Individual Assignment</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#">Group Assignment</a>
+              <a class="dropdown-item" href="checklist-group.html">Group Assignment</a>
             </li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light d-flex align-items-center px-2 px-md-3" href="https://web.microsoftstream.com/channel/987d2668-18d7-4d84-9342-4774e7d0ba94" target="_blank">
-            <img class="me-1" src="images/common/film.svg" width="15" alt="Videos">
+          <a class="nav-link text-light d-flex align-items-center px-2 px-lg-3" href="https://web.microsoftstream.com/channel/987d2668-18d7-4d84-9342-4774e7d0ba94" target="_blank">
+            <img class="me-md-1" src="images/common/film.svg" width="15" alt="Videos">
             <span class="d-none d-md-inline">Videos</span>
+          </a>
+        </li>
+        <li class="nav-item ms-auto">
+          <a class="nav-link text-light d-flex align-items-center px-2 px-lg-3 bg-danger bg-gradient" data-bs-toggle="offcanvas" href="#searchOffcanvas" role="button" aria-controls="searchOffcanvas">
+            <img class="me-md-1" src="images/common/search.svg" width="15" alt="Videos">
+            <span class="d-none d-md-inline">Search</span>
           </a>
         </li>
       </ul>
@@ -184,13 +215,13 @@
               <a class="btn btn-danger fs-4 m-2" href="#practice_editing_styles"><span class="badge text-danger rounded-pill bg-white">3.3</span> Practice: Edit styles.css</a>
             </li>
             <li>
-              <a class="btn btn-danger fs-4 m-2" href="#what_is_bootstrap"><span class="badge text-danger rounded-pill bg-white">3.4</span> What is Bootstrap?</a>
+              <a class="btn btn-danger fs-4 m-2" href="#what_is_bootstrap"><span class="badge text-danger rounded-pill bg-white">3.4</span> Bootstrap Basics</a>
             </li>
             <li>
               <a class="btn btn-danger fs-4 m-2" href="#combine_bootstrap_css"><span class="badge text-danger rounded-pill bg-white">3.5</span> Combine Bootstrap and your own CSS</a>
             </li>
             <li>
-              <a class="btn btn-danger fs-4 m-2" href="#using_fonts"><span class="badge text-danger rounded-pill bg-white">3.6</span> Using Fonts</a>
+              <a class="btn btn-danger fs-4 m-2" href="#using_fonts"><span class="badge text-danger rounded-pill bg-white">3.6</span> Use Web Fonts</a>
             </li>
           </ul>
         </div>
@@ -1070,5 +1101,6 @@
         });
       }
     </script>
+    <script type="text/javascript" src="js/search.js"></script>
   </body>
 </html>
