--- a/index.html
+++ b/index.html
@@ -95,8 +95,29 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="#">Add style to your page</a>
+              <a class="dropdown-item" href="part-3.html">Add style to your page</a>
             </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-3.html#overview_goals"><span class="badge rounded-pill bg-buas">3.1</span> Overview & goals</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-3.html#what_is_css"><span class="badge rounded-pill bg-buas">3.2</span> CSS Basics</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-3.html#practice_editing_styles"><span class="badge rounded-pill bg-buas">3.3</span> Practice: Edit styles.css</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-3.html#what_is_bootstrap"><span class="badge rounded-pill bg-buas">3.4</span> Bootstrap Basics</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-3.html#combine_bootstrap_css"><span class="badge rounded-pill bg-buas">3.5</span> Combine Bootstrap and your own CSS</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-3.html#using_fonts"><span class="badge rounded-pill bg-buas">3.6</span> Use Web Fonts</a>
+            </li> 
           </ul>
         </li>
         <li class="nav-item">
@@ -192,6 +213,12 @@
               <a class="btn btn-danger fs-4 m-2 d-flex align-items-center text-start" href="part-2.html">
                 <span class="badge text-danger rounded-pill bg-white me-2">Part 2</span>
                 <span>Edit the contents of your page</span>
+              </a>
+            </li>
+            <li>
+              <a class="btn btn-danger fs-4 m-2 d-flex align-items-center text-start" href="part-3.html">
+                <span class="badge text-danger rounded-pill bg-white me-2">Part 3</span>
+                <span>Add style to your page</span>
               </a>
             </li>
             <li>
