--- a/part-2.html
+++ b/part-2.html
@@ -97,8 +97,29 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="#">Add style to your page</a>
+              <a class="dropdown-item" href="part-3.html">Add style to your page</a>
             </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-3.html#overview_goals"><span class="badge rounded-pill bg-buas">3.1</span> Overview & goals</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-3.html#what_is_css"><span class="badge rounded-pill bg-buas">3.2</span> CSS Basics</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-3.html#practice_editing_styles"><span class="badge rounded-pill bg-buas">3.3</span> Practice: Edit styles.css</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-3.html#what_is_bootstrap"><span class="badge rounded-pill bg-buas">3.4</span> Bootstrap Basics</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-3.html#combine_bootstrap_css"><span class="badge rounded-pill bg-buas">3.5</span> Combine Bootstrap and your own CSS</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-3.html#using_fonts"><span class="badge rounded-pill bg-buas">3.6</span> Use Web Fonts</a>
+            </li> 
           </ul>
         </li>
         <li class="nav-item">
@@ -143,7 +164,7 @@
               <a class="dropdown-item" href="checklist-individual.html">Individual Assignment</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#">Group Assignment</a>
+              <a class="dropdown-item" href="checklist-group.html">Group Assignment</a>
             </li>
           </ul>
         </li>
